--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,11 @@
-WindowWidth: 1600
-WindowHeight: 1000
-NumBoids: 512
-NumWorkers: 12
-RandomSeed: 0
+WindowWidth: 1600                       # The width of the window, in pixels
+WindowHeight: 1000                      # The width of the window, in pixels
+NumBoids: 2048                          # The number of boids to spawn
+BoidVelocity: 4.0                       # The target velocity of each boid
+BoidVision: 128.0                       # The distance that boids can see, in pixels --- larger visions make for more stable emergent flocks
+BoidSeparationOptimalProximity: 0.05    # The proximity measure boids aim for --- a proximity of 1.0 is as close as possible
+BoidSeparationCoefficient: 0.75         # How strongly boids weight Separation --- Determines how separated boids should be
+BoidAlignmentCoefficient: 0.15          # How strongly boids weight Alignment --- Determines how aligned boids should be, makes boids fly in the same direction
+BoidCohesionCoefficient: 0.05           # How strongly boids weight Cohesion --- Determines how cohesive boids should be, makes boids steer towards other boids
+NumWorkers: 12                          # The number of worker goroutines to use --- more go routines means faster frames, but requires more resources
+RandomSeed: 0                           # The random seed used for initialization --- use 0 for a random seed based on the timestamp
